oxygen-icons5 (5:5.24.0-0r1) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * New upstream release.
  * Bump extra-cmake-modules build dependency to 5.24.0~.
  * Add 5 as epoch, so the binaries can take over older binaries from
    src:oxygen-icons.

 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Jul 2016 16:29:12 +0200

oxygen-icons5 (5.23.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Sat, 18 Jun 2016 08:25:45 +0200

oxygen-icons5 (5.22.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Wed, 18 May 2016 23:44:17 +0200

oxygen-icons5 (5.21.0-1) experimental; urgency=medium

  [ Rohan Garg ]
  * Fix target in debian/rules since the dh_install commands
    are arch independent.

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake
  * Bump Standards-Version to 3.9.8

  [ Maximiliano Curia ]
  * uscan no longer supports more than one main upstream tarball being listed
  * New upstream release moves conflicting x-mail-distribution.png file to
    base/x-mail-distribution.png (Closes: #820447) Thanks to Andreas Beckmann
    for reporting.
  * New upstream release moves conflicting x-mail-distribution.png file to base/x-mail-distribution.png (Closes: #820447)

 -- Maximiliano Curia <maxy@debian.org>  Thu, 05 May 2016 15:31:30 +0200

oxygen-icons5 (5.19.0-1) experimental; urgency=medium

  * New upstream release (5.19.0).

 -- Maximiliano Curia <maxy@debian.org>  Sat, 13 Feb 2016 15:16:36 +0100

oxygen-icons5 (5.18.0-1) experimental; urgency=medium

  * New upstream release.
  * Package renamed upstream.
  * New upstream release (5.18.0).

  [ Philip Muškovac ]

  * New upstream release, for kf5
  * Port watch file to new download location
  * Build-depend on extra-cmake-modules, qtbase5-dev