@@ -19,13 +19,22 @@ Homepage: http://www.kde.org/
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/oxygen-icons5.git/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/frameworks/oxygen-icons5.git
 
-Package: oxygen5-icon-theme
+Package: oxygen-icon-theme
 Architecture: all
 Depends: hicolor-icon-theme, ${misc:Depends}
-Breaks: fdpowermon-icons, oxygen-icon-theme
-Replaces: fdpowermon-icons, oxygen-icon-theme
-Provides: oxygen-icon-theme
+Breaks: fdpowermon-icons, oxygen5-icon-theme (<< 5:5.24.0)
+Replaces: fdpowermon-icons, oxygen5-icon-theme (<< 5:5.24.0)
 Description: Oxygen icon theme
  Oxygen is the standard icon theme for KDE 4, but follows the freedesktop.org
  icon schemes, so it can be used in other desktop environments using this
  specification.
+
+Package: oxygen5-icon-theme
+Architecture: all
+Section: oldlibs
+Priority: extra
+Depends: ${misc:Depends}, oxygen-icon-theme (>= ${source:Version})
+Description: transitional package for oxygen-icon-theme
+ This is a transitional package for oxygen-icon-theme.
+ .
+ It can be safely removed after the upgrade.
