@@ -5,6 +5,10 @@ oxygen-icons5 (5:5.24.0-0r1) UNRELEASED; urgency=medium
   * Bump extra-cmake-modules build dependency to 5.24.0~.
   * Add 5 as epoch, so the binaries can take over older binaries from
     src:oxygen-icons.
+  * Rename oxygen5-icon-theme back to oxygen-icon-theme, since it is the name
+    of the icon theme:
+    - add proper breaks/replaces
+    - add oxygen5-icon-theme as transitional package
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Jul 2016 16:29:12 +0200
 
